--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>Lawatan</title>
   </head>
-  <body>
+  <body style="overflow: hidden; height: 100vh">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
